# OctaneLauncher

./: LICENSE  README.md  auth.html  console.html  crowdin.yml  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: crowdin.yml  release.yml
frontend/: App.css  App.svelte  App.tsx  console.ts  console.tsx  main.ts  main.tsx
frontend/components/layout/: Sidebar.svelte  Sidebar.tsx  TitleBar.svelte  TitleBar.tsx
frontend/components/ui/: AlertModal.svelte  ConfirmModal.svelte  ConfirmModal.tsx  ContextMenu.svelte  ContextMenu.tsx  SearchModal.tsx  Tooltip.svelte  Tooltip.tsx
frontend/features/browse/: BrowseTab.svelte  BrowseTab.tsx
frontend/features/console/: ConsoleTab.svelte  ConsoleTab.tsx  ConsoleWindow.svelte  ConsoleWindow.tsx
frontend/features/curseforge/: ModpacksTab.svelte  ModpacksTab.tsx  ModsTab.svelte  (+5 more)
frontend/hooks/: useLauncherState.ts
frontend/lib/: actions.ts  format.ts  launcherStore.svelte.ts  portal.ts  store.ts  version.ts
frontend/types/: index.ts
locales/de/: common.json
locales/en/: common.json
locales/es/: common.json
locales/fi/: common.json
locales/fr/: common.json
locales/pt/: common.json
locales/sv/: common.json
scripts/: get-version.cjs
src/: i18n.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs  models.rs
src-tauri/src/auth/: auth.rs
src-tauri/src/commands/: auth.rs  chat.rs  commands.rs  friends.rs  instance_export.rs  instances.rs  mod.rs  modpacks.rs  mods.rs  packs.rs  screenshots.rs  servers.rs  settings.rs  skins.rs  snapshot.rs  templates.rs  trash.rs  validation.rs  versions.rs
src-tauri/src/services/: accounts.rs  chat.rs  fabric.rs  forge.rs  friends.rs  installer.rs  instance.rs  instance_launch.rs  mod.rs  neoforge.rs  settings.rs  snapshot.rs  template.rs  trash.rs
src-tauri/src/utils/: curseforge.rs  http.rs  mod.rs  modrinth.rs  utils.rs
src/frontend/: App.css  App.tsx
(+75 files in other folders)
