[package]
name = "AtomicLauncher"
version = "2.4.0"
description = "A Minecraft Launcher"
authors = ["karlsson1000"]
edition = "2021"

[lib]
name = "atomic_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0"
dirs = "5.0"
oauth2 = "4.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.0", features = ["serde"] }
tiny_http = "0.12"
urlencoding = "2.1"
dotenv = "0.15"
sha1 = "0.10"
tauri-plugin-shell = "2"
zip = "2.2"
sysinfo = "0.30"
image = "0.25"
base64 = "0.22"
dotenvy = "0.15"
